k8s/overlays/prod/infrastructure/open-ia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-ia
  namespace: prod
spec:
  selector:
    app: open-ia
  ports:
    - name: http
      port: 8080
      targetPort: 8080
