k8s/overlays/prod/infrastructure/open-ia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-ia
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: open-ia.cluster.stringtecnologiadf.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-ia
                port:
                  number: 8080
